--- a/package.json
+++ b/package.json
@@ -10,11 +10,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
+    "expo-app-loading": "^1.3.0",
+    "expo-font": "^10.0.4",
+    "expo-status-bar": "^1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-modalize": "^2.0.12",
+    "react-native-paper": "^4.11.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
