--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-asset": "~8.4.5",
+    "expo-file-system": "~13.1.0",
     "expo-font": "^10.0.4",
+    "expo-sqlite": "~10.1.0",
     "expo-status-bar": "^1.2.0",
     "lighten-darken-color": "^1.0.0",
     "react": "17.0.1",
